# RustSharp

./: Cargo.toml  README.md  UpdateHighlighting.ps1  rember.yml
llvm_playground/: run.sh  test  test.ll
rustsharp/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
rustsharp/syntaxes/: rsharp.tmLanguage.json
samples/: test.rsharp
src/: ast.rs  lib.rs  main.rs  parser.lalrpop
src/bind/: binder.rs  bound_ast.rs  mod.rs
src/code_gen/: llvm_context.rs  llvm_ir_builder.rs  llvm_module.rs  mod.rs  tmp.rs
