[package]
name = "rust_sharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.19.7", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# upx --best --lzma .\target\release\rust_sharp.exe
